--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Kareem's Homepage</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-	<meta charset="UTF-8" />
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -32,7 +27,13 @@
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
+			<a href = "../lab2/index.html"> </a>
 		</nav>
 	</main>
-</body>
+</body><!-- This title is used for tabs and bookmarks -->
+	<title>Kareem's Homepage</title>
+
+	<!-- Use UTF character set, a good idea with any webpage -->
+	<meta charset="UTF-8" />
+	
 </html>
