--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
-			<a href = "../lab2/index.html">Lab2</a>
+			<a href = "/lab2/index.html">Lab 2</a>
 		</nav>
 	</main>
 </body><!-- This title is used for tabs and bookmarks -->
