--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
 			</div>
 
 		</section>
-		<div class="assignments-major-section">
-			<h2>Labs</h2>
-			<!-- Put links to labs here. -->
-			<ul>
-				<li><a href = "./lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
-				<li><a href = "./lab3/">Lab 3 File Structure and File Transfer</a></li>
-				<li><a href = "./lab4/">Lab 4 Pseudocode and Problem-solving</a></li>
-				<li><a href = "./lab5/">Lab 5</a></li>
-				<li><a href = "./lab1/">Lab 6</a></li>
-			</ul>
-			
-		</div>
+		<section>
+			<div class="assignments-major-section">
+				<h2>Labs</h2>
+				<!-- Put links to labs here. -->
+				<ul>
+					<li><a href = "./lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
+					<li><a href = "./lab3/">Lab 3 File Structure and File Transfer</a></li>
+					<li><a href = "./lab4/">Lab 4 Pseudocode and Problem-solving</a></li>
+					<li><a href = "./lab5/">Lab 5</a></li>
+					<li><a href = "./lab6/">Lab 6</a></li>
+				</ul>
+			</div>
+		</section>
 	</main>
 </body><!-- This title is used for tabs and bookmarks -->
 	<title>Kareem's Homepage</title>
