Changes to homepage and lab 3

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img id="my-portrait" src="./img/selfie.jpg">
-					<h2>About Me</h2>
+					<h3>Kareem Wellington</h3>
+					<p>
+						Student @ University of California, Santa Cruz
+					</p>
+					<p>
+						Art & Design: Games + Playable Media Major
+					</p>
 					<p> HI! I'm Kareem. I am a third year AGPM major. I play a lot of video games, mainly I've been
 						playing a lot of Rimworld, Tekken 8, Valorant, and League of Legends.
 					</p>
@@ -33,7 +39,7 @@
 				<!-- Put links to labs here. -->
 				<ul>
 					<li><a href = "./lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
-					<li><a href = "./lab3/">Lab 3 File Structure and File Transfer</a></li>
+					<li><a href = "./lab3/index.html">Lab 3 File Structure and File Transfer</a></li>
 					<li><a href = "./lab4/">Lab 4 Pseudocode and Problem-solving</a></li>
 					<li><a href = "./lab5/">Lab 5</a></li>
 					<li><a href = "./lab6/">Lab 6</a></li>
