--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Structure and File Transfer</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -12,7 +12,6 @@
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -23,24 +22,29 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - File Structure and File Transfer</h1>
 			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+				<h2>Subject</h2>
+				<p>For this lab, we have to create and manage our local file structure and edit our homepage, using an index.html file</p>
 			</div>
-
 			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<h2>Challenges</h2>
+					<p>I had a hard time remembering to close some of my elements, but as I went on I became more consistent. The file structure portion of this assignment was 
+						pretty easy, as it is something I've always been mindful of. </p>
 			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
 			<div class="minor-section">
 					<h2>Results</h2>
+					<p>Here are the screenshots of my file structure, index files, and webpages. </p>
+					<p><b>File Structure</b></p>
+					<img src = "./img/Lab3 task1.jpg" width = 650>
+					<p><b>Homepage Index file</b></p>
+					<img src = "./img/Lab3 task2.jpg" width = 650>
+					<p><b>Homepage</b></p>
+					<img src = "./img/lab3 task2pt2.jpg" width = 650>
+					<p><b>Lab 3 Index file</b></p>
+					<img src = "./img/lab3 task3.jpg" width = 650>
+					<p><b>Final Lab 3 page</b></p>
+					<img src = "./img/lab3 task3pt.jpg" width = 650>
 					<div id="output"></div>
 			</div>
 		</section>
