Finished Lab 3 Task X

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 			<h1>Kareem's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img id="my-portrait" src="./img/selfie.jpg">
+					<div class = "image">
+						<img id="my-portrait" src="./img/selfie.jpg">
+					</div>
+					
 					<h3>Kareem Wellington</h3>
 					<p>
 						Student @ University of California, Santa Cruz
@@ -30,8 +33,8 @@
 					<p> HI! I'm Kareem. I am a third year AGPM major. I play a lot of video games, mainly I've been
 						playing a lot of Rimworld, Tekken 8, Valorant, and League of Legends.
 					</p>
+					
 			</div>
-
 		</section>
 		<section>
 			<div class="assignments-major-section">
