--- a/lab4/index.html
+++ b/lab4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 4 - Pseudocoding and Problem-solving</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -11,8 +11,7 @@
 	
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	
 	
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -23,25 +22,55 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 4 - Pseudocoding and Problem-solving</h1>
 			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+				<h2>Subject</h2>
+				<p>For this lab, we had to create Pseudocode for a simple computer game</p>
 			</div>
-
 			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<h2>Challenges</h2>
+					<p></p>
 			</div>
-
 			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
+				<h2>Results</h2>
+				<h3>Task 1: Pseudocode an everyday task</h3>
+				<ol> 
+					<li>Preheat the oven to 350 degrees</li>
+					<li>Take out all the ingredients: butter, sugar, flour, salt, vanilla extract, and chocolate chips</li>
+					<li>Take out a bowl, a whisk, a baking sheet, and a spoon</li>
+					<li>Melt the butter</li>
+					<li>Add sugar to the melted butter</li>
+					<li>Mix in one egg and the vanilla extract</li>
+					<li>Add flour, baking soda, and salt to the mixture</li>
+					<li>Once smoothly mixed, add in chocolate chips</li>
+					<li>After the chocolate chips have been evenly folded in, take a spoon scoop out balls of cookie dough, and place them on the baking sheet</li>
+					<li>Bake the cookies for 7-10 minutes</li>
+				</ol>
+				<h3>Task 2: Pseudocode a simple computer game</h3>
+					<ol>
+						<li>Print the images of rocks,paper, and scissors</li>
+						<li>Accept user input</li>
+						<li>Have the computer randomly pick between rock, paper, or scissors</li>
+						<li>Compare user input and computer choice</li>
+						<li>Choose winner</li>
+						<li>If it is a tie, the game restarts</li>
+					</ol>
+				<h3>Task 3: Turn pseudocode into comments</h3>
+				<img src = "./img/javascript.jpg" width = 650>
+				<pre><code>
+//Loop to checking if win condition is met 
+//Print out each option: Rock, Paper, Scissors
+//Allow the user to select Rock, Paper, or Scissors
+//Have computer randomly select Rock, Paper, or Scissors
+//If User and Computer selected the same thing
+//Restart Game
+//If they are different, choose the winner
+//User selects rock and computer selects scissors or User selects scissors and computer selects paper or User selects paper and computer selects rock
+	//User wins
+//If none of those conitions are met
+//Computer wins
+    
+				</pre></code>
 			</div>
 		</section>
 		<nav id="links">
