--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<ul>
 					<li><a href = "./lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
 					<li><a href = "./lab3/index.html">Lab 3 File Structure and File Transfer</a></li>
-					<li><a href = "./lab4/">Lab 4 Pseudocode and Problem-solving</a></li>
+					<li><a href = "./lab4/index.html">Lab 4 Pseudocode and Problem-solving</a></li>
 					<li><a href = "./lab5/">Lab 5</a></li>
 					<li><a href = "./lab6/">Lab 6</a></li>
 				</ul>
