--- a/lab3/index.html
+++ b/lab3/index.html
@@ -53,7 +53,7 @@
 			<ul>
 				<li><a href = "../index.html">Homepage</a></li>
 				<li><a href = "../lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
-				<li><a href = "../lab4/">Lab 4 Pseudocode and Problem-solving</a></li>
+				<li><a href = "../lab4/index.html">Lab 4 Pseudocode and Problem-solving</a></li>
 				<li><a href = "../lab5/">Lab 5</a></li>
 				<li><a href = "../lab6/">Lab 6</a></li>
 			</ul>
