--- a/lab4/index.html
+++ b/lab4/index.html
@@ -29,7 +29,9 @@
 			</div>
 			<div class="minor-section">
 					<h2>Challenges</h2>
-					<p></p>
+					<p>I had a hard time seperating a simple game into multiple simple and easily understandable tasks. I felt like there were some things
+						that I was missing when breaking it down into pseudocode, but I think it turned out fine.
+					</p>
 			</div>
 			<div class="minor-section">
 				<h2>Results</h2>
@@ -58,18 +60,19 @@
 				<h3>Task 3: Turn pseudocode into comments</h3>
 				<img src = "./img/javascript.jpg" width = 650>
 				<pre><code>
-//Loop to checking if win condition is met 
-//Print out each option: Rock, Paper, Scissors
-//Allow the user to select Rock, Paper, or Scissors
-//Have computer randomly select Rock, Paper, or Scissors
-//If User and Computer selected the same thing
-//Restart Game
-//If they are different, choose the winner
-//User selects rock and computer selects scissors or User selects scissors and computer selects paper or User selects paper and computer selects rock
-	//User wins
-//If none of those conitions are met
-//Computer wins
-    
+//Loop to check if win condition is met 
+	//Print out each option: Rock, Paper, Scissors
+	//Allow the user to select Rock, Paper, or Scissors
+	//Print out the user's choice
+	//Have computer randomly select Rock, Paper, or Scissors
+	//Print out what the computer choice
+	//If User and Computer selected the same thing
+		//Restart Game
+	//If they are different, choose the winner
+	//User selects rock and computer selects scissors or User selects scissors and computer selects paper or User selects paper and computer selects rock
+		//User wins
+	//If none of those conitions are met
+		//Computer wins
 				</pre></code>
 			</div>
 		</section>
