--- a/lab4/index.html
+++ b/lab4/index.html
@@ -78,7 +78,13 @@
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
+			<ul>
+				<li><a href = "../index.html">Homepage</a></li>
+				<li><a href = "../lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
+				<li><a href = "../lab3/index.html">Lab 3 File Structure and File Transfer</a></li>
+				<li><a href = "../lab5/">Lab 5</a></li>
+				<li><a href = "../lab6/">Lab 6</a></li>
+			</ul>
 	</main>
 </body>
 </html>
