--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6 - Arrays and Objects</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -11,8 +11,8 @@
 	
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="./css/lab.css">
+
 	
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -23,29 +23,41 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 6 - Arrays and Objects</h1>
+			
 			<div class="minor-section">
+				<div class =image>
+					<img src = "./img/car.jpg"width = 400>
+				</div>
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
+					<p>For this lab we worked with javacript again, learning the basics of objects and arrays.</p>
 
-			<div class="minor-section">
+
+	
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
+					<p>I had no problems with this lab.</p>
+			
 
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
+			
 					<h2>Results</h2>
-					<div id="output"></div>
+					<p>This assignment served as a good intro to objects and arrays, I am excited to experiment more with the two.</p>
 			</div>
+
+			<h3>Script Output</h3>
+			<div class=output>
+        		<script type="text/javascript" src="js/lab.js"></script>
+			</div>
+			
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
+			<ul>
+				<li><a href = "../index.html">Homepage</a></li>
+				<li><a href = "../lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
+				<li><a href = "../lab3/index.html">Lab 3 File Structure and File Transfer</a></li>
+				<li><a href = "../lab4/index.html">Lab 4 Pseudocoding and Problem-solving</a></li>
+				<li><a href = "../lab5/index.html">Lab 5 Data Types and Variables</a></li>
+			</ul>
 		</nav>
 	</main>
 </body>
