--- a/lab7/index.html
+++ b/lab7/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 6 - Arrays and Objects</title>
+	<title>Lab 7 - Functions</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -17,17 +17,17 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 6 - Arrays and Objects</h1>
+			<h1>Lab 7 - Functions</h1>
 			
 			<div class="minor-section">
 				<div class =image>
-					<img src = "./img/car.jpg"width = 400>
+					<h1><div id="username"></div></h1>
+					<img src = "./img/nametag.jpg"width = 400>
 				</div>
 					<h2>Challenge</h2>
 					<p>For this lab we worked with javacript again, learning the basics of objects and arrays.</p>
@@ -42,10 +42,11 @@
 					<h2>Results</h2>
 					<p>This assignment served as a good intro to objects and arrays, I am excited to experiment more with the two.</p>
 			</div>
-
-			<h3>Script Output</h3>
-			<div class=output>
-        		<script type="text/javascript" src="js/lab.js"></script>
+			<div>
+				<h2>Script Output</h2>
+				
+				<div id="sortedname"></div>
+				<script src="js/lab.js"></script>
 			</div>
 			
 		</section>
@@ -57,6 +58,7 @@
 				<li><a href = "../lab3/index.html">Lab 3 File Structure and File Transfer</a></li>
 				<li><a href = "../lab4/index.html">Lab 4 Pseudocoding and Problem-solving</a></li>
 				<li><a href = "../lab5/index.html">Lab 5 Data Types and Variables</a></li>
+				<li><a href = "../lab6/index.html">Lab 6 Arrays and Objects</a></li>
 			</ul>
 		</nav>
 	</main>
