--- a/lab7/index.html
+++ b/lab7/index.html
@@ -26,27 +26,41 @@
 			
 			<div class="minor-section">
 				<div class =image>
-					<h1><div id="username"></div></h1>
 					<img src = "./img/nametag.jpg"width = 400>
+					<div class = overlay-text>
+						<h1><div id="username"></div></h1>
+					</div> 
 				</div>
 					<h2>Challenge</h2>
-					<p>For this lab we worked with javacript again, learning the basics of objects and arrays.</p>
+					<p>For this lab we created a javascript function that asks the user for their name and sorts it.</p>
 
 
 	
 					<h2>Problems</h2>
-					<p>I had no problems with this lab.</p>
+					<p>While I had no problems with the main task of this lab, I ran into a lot when working on the bonus task. 
+					   For the bonus task I moved the userinput outside of the function, styled my output with css, and
+					   sorted the name ignoring both case and spaces. While moving the user input and ignoring case was easy, I had a
+					   a hard time figuring out how to sort names seperately, ignoring spaces. I was able to do this by first splitting
+					   the user input into an array of seperate words and then using the .map method to iterate through the array of words
+					   using the .map method to iterate through the array and spliting into seperate arrays of characters, sorting those arrays, then rejoining them.
+					   after that I was left with one array with sorted strings, that I joined once more to create a single string. The final thing I had a problem with was 
+					   figuring out how to print out specific things in java script instead of printing all of the output in the same place, I was able to fix this by using
+					   document.getElementById instead of document.writeln.
+
+
+					</p>
 			
 
 			
 					<h2>Results</h2>
-					<p>This assignment served as a good intro to objects and arrays, I am excited to experiment more with the two.</p>
+					<p>Overall I had fun working on this assignment, I found the bonus tasks to be a great learning experience.</p>
 			</div>
 			<div>
 				<h2>Script Output</h2>
-				
-				<div id="sortedname"></div>
-				<script src="js/lab.js"></script>
+				<div class=output>
+					<div id="sortedname"></div>
+					<script src="js/lab.js"></script>
+				</div>
 			</div>
 			
 		</section>
