--- a/lab8/index.html
+++ b/lab8/index.html
@@ -28,7 +28,7 @@
 					<p>For this lab we experimented with anon functions and callbacks in javascript.</p>
 
 					<h2>Problems</h2>
-					<p>The main part of the lab was pretty straightforward, but I struggled with formatting my output using jsquery for task x
+					<p>The main part of the lab was pretty straightforward, but I struggled with formatting my output using jsquery for task x.
 					   I was able to fix it by doing some some research online and finding out I had to tinker with my css file.
 					</p>
 			
