--- a/lab15/index.html
+++ b/lab15/index.html
@@ -26,26 +26,17 @@
 			<h1>Lab 15 - AJAX</h1>
 			
 			<div class="minor-section">
-				<div id = "img-out">
-					<div class =image>
-						<img src = "./img/nametag.jpg"width = 400>
-						<div class = overlay-text>
-							<h1 id="nametag"></h1>
-						</div> 
-					</div>
-				</div>
 					<h2>Challenge</h2>
-					<p></p>
+					<p>For this lab we experimented with jQuery and AJAX.</p>
 
 					<h2>Problems</h2>
-					<p>
-					</p>
+					<p>The steps in this lab and lecture made this lab pretty straightforward.</p>
 			
 					<h2>Results</h2>
-					<p></p>
+					<p>Click the activate button to make a random chuck norris joke appear!</p>
 			</div>
 			<div id="output"></div>
-			<button id="submit">Submit</button>
+			<button id="activate">Activate</button>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
